Updated Books and fixed spacing for headers

--- a/main.css
+++ b/main.css
@@ -171,6 +171,7 @@ a {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24pt;
   display: none;
+  padding-top: 2em;
 }
 
 .projects {
@@ -262,6 +263,10 @@ a {
   align-content: center;
 }
 
+.books {
+  padding-top: 2em;
+}
+
 .books-carousel {
   margin: 2em auto;
   display: flex;
@@ -273,28 +278,28 @@ a {
   display: none;
 }
 
-.books {
+.books-items {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 1.5em;
-  animation: spin 25s infinite linear;
+  animation: spin 60s infinite linear;
   padding-right: 1em;
 }
 
-.books a {
+.books-items a {
   flex: 0 0 2em;
   height: 25em;
   padding: 1em;
   padding-left: 4em;
-  padding-right: 8em;
+  padding-right: 6em;
   border-radius: .2em;
   text-align: center;
   align-content: center;
 }
 
-.books img {
-  height: 100%;
+.books-items img {
+  height: 90%;
 }
 
 @keyframes spin {
@@ -309,6 +314,10 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.playground h1 {
+  padding-top: 2em;
 }
 
 * {
